--- a/index.html
+++ b/index.html
@@ -29,10 +29,39 @@
             <h1>Biography</h1>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work.I am learning and mastering web development</p>
             <a class="link-button" target=_blank href="www.google.com">DOWNLOAD CV</a>
-
         </div>
+    </section>
 
+    <section class="work-background">
+        <div class="work-title">
+            <h1><center>My Latest Work</center></h1>
+            </div>
 
+        <div class="work-banners">
+            <div class="work1-banner">
+                <img src="images/work-1.png" alt="">
+            </div>
+
+            <div class="work2-banner">
+                <img src="images/work-2.jpg" alt="">
+            </div>
+
+            <div class="work3-banner">
+                <img src="images/work-3.jpg" alt="">
+            </div>
+            </div>
+    </section>
+
+    <section class="footer-background">
+        <center><h1>What Clients Saying</h1>
+        <p><b>Bruce Moccy</b><br>
+        Founder & CEO Alice</p><br>
+
+        <p class="testimonial">"You might saw me jumping, climbing buildings, <br>and stopping trains.But nobody pays me a dime."</p> <br>
+
+        <p class="message">Leave me a message in the <br><span class="mail">CEO@google.com</span></p>
+
+        <footer class="footer-style">A arifcoder Production. &copy; 2020 All rights reserved.</footer></center>
     </section>
     
 </body>
