--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
             <h1><center>My Latest Work</center></h1>
             </div>
 
-        <div class="work-banners">
+        
             <div class="work1-banner">
-                <img src="images/work-1.png" alt="">
+                <img src="images/latest-work/work-1.png" alt="">
             </div>
 
             <div class="work2-banner">
-                <img src="images/work-2.jpg" alt="">
+                <img src="images/latest-work/work-3.jpg" alt="">
             </div>
 
             <div class="work3-banner">
-                <img src="images/work-3.jpg" alt="">
+                <img src="images/latest-work/work-2.jpg" alt="">
             </div>
             </div>
     </section>
