--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Hello I'm</h1>
             <h2><span class="pink">Jack Smith</span></h2>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work.I am learning and mastering web development</p>
-            <a class="link-button" target=_blank href="www.google.com">HIRE ME</a>
+            <a class="link-button" target=_blank href="www.google.com">HIRE ME.</a>
         </div>
         <div class="first-section-half-right-banner">
             <img src="images/peter.png" alt="">
